additional vdyp-common unit tests