@@ -460,7 +460,10 @@ public class TestUtils {
 
 		@Override
 		protected List<ControlKey> outputFileParsers() {
-			return Collections.emptyList();
+			return List.of(
+					ControlKey.VDYP_OUTPUT_VDYP_POLYGON, ControlKey.VDYP_OUTPUT_VDYP_LAYER_BY_SPECIES,
+					ControlKey.VDYP_OUTPUT_VDYP_LAYER_BY_SP0_BY_UTIL
+			);
 		}
 
 		@Override
